add new services to docker compose && include also frontend